# openword-lexicon

./: .gitignore  ATTRIBUTION.md  BRANCH_DIFF_ANALYSIS.md  CAPABILITY_AUDIT.md  MANIFEST.json  Makefile  POLYSEMY_ANALYSIS.md  README.md  SCANNER_REFACTORING.md  SLICE_ANALYSIS_AND_RECOMMENDATIONS.md  SPIKE_WIKTIONARY_FINAL_RESULTS.md  SPIKE_WIKTIONARY_PERFORMANCE.md  XML_SCANNING_REVIEW.md  fix_syllable_count.md  investigation_report.txt  openword-phases.txt  pyproject.toml  test_slices.py  wikmorph.md
data/: .limits-log.json  LICENSE
docs/: ANALYSIS_WORKFLOW.md  BUILDING.md  DATASETS.md  DESIGN.md  FILTERING.md  FILTER_CAPABILITIES.md  FORMAT-HISTORY.md  GAME_WORDS.md  LOCAL_ANALYSIS.md  MAKEFILE_REFERENCE.md  PROJECT_STRUCTURE_PROPOSAL.md  QUICKSTART.md  REPORT_ANALYSIS.md  SCHEMA.md  SOURCES.md  USAGE.md  V2_PARITY_ANALYSIS.md  VALIDATION.md  WIKTIONARY-CORPUS.md  WIKTIONARY_ALTERNATIVES.md  WORDNET_OEWN_MIGRATION.md  labels.md  phrase_and_language_filtering.md  phrase_word_separation.md
examples/: README.md  create_profanity_blocklist.sh  filter_by_semantic_category.sh  filter_kids_vocabulary.sh
legacy/: schema
reports/: README.md  SYLLABLE_REVIEW.md  distribution_comparison.md  frequency_analysis.md  frequency_tiers.json  game_metadata_analysis_core.md  game_metadata_analysis_plus.md  label_examples.json  label_statistics.md  label_statistics_built_plus.md  metadata_analysis_core.md  metadata_analysis_en.md  metadata_analysis_plus.md  metadata_exploration_core.md  metadata_exploration_plus.md  phrase_analysis_plus.md  pipeline_inspection_core.md  pipeline_inspection_plus.md  raw_data_inspection.md  scanner_diagnostic.txt  syllable_analysis.md  syllable_conflict_analysis.md  syllable_implementation_review.md  trie_inspection_core.md  trie_inspection_plus.md  wiktionary_analysis.md  wordnet_concreteness.md
schema/: ROADMAP.md  categories.yaml  codes.json  pos.yaml
scripts/: README.md  benchmark_trie.py  clean_formatting.py  verify_oewn_migration.sh
tests/: OEWN_MIGRATION_RESULTS.md  README.md  README_WORDNET_TESTS.md  WORDNET_BASELINE_FINDINGS.md  __init__.py  conftest.py  conftest_wordnet.py  hotspot-words.txt  hotspotwords-stats.json  run_wordnet_tests.sh  test_accent_normalization.py  test_build_stats.py  test_lemma_extraction.py  test_lemma_pipeline.py  test_morphology_extraction.py  test_owlex.py  test_pipeline_smoke.py  test_scanner_parity.py  test_syllable_extraction.py  test_syllable_filtering.py  test_syllable_integration.py  test_trie_building.py  test_v2_scanner_regression.py  test_wikitext_parser.py  test_wiktionary_categories.py  test_wiktionary_data_quality.py  test_wordnet_enrichment.py  test_wordnet_standalone.py  wordnet_baseline_results.json  wordnet_test_results.txt
tools/: README.md  analyze_frequency_data.py  analyze_game_metadata.py  analyze_hyphenation.py  analyze_labels.py  analyze_metadata.py  analyze_polysemy.py  analyze_syllable_data.py  analyze_wiktionary_needs.py  analyze_wordnet_concreteness.py  audit_wiktionary_extraction.py  baseline_decompress.py  collect_adj_comparability.py  collect_labels.py  collect_pos.py  compare_outputs.py  (+34 more)
tools/wiktionary-rust/: Cargo.toml  PARALLEL_OPTIMIZATION.md  QUICKSTART.md  README.md
tools/wiktionary-rust/scripts/: benchmark.sh  generate_synthetic_data.py  run_full_benchmark.py  validate_parity.py
tools/wiktionary-rust/src/: main.rs  parallel.rs
tools/wiktionary-scanner-rust/: Cargo.toml  QUICKSTART.md  README.md
tools/wiktionary-scanner-rust/scripts/: benchmark.sh  validate_parity.py
tools/wiktionary-scanner-rust/src/: main.rs  parallel.rs
(+470 files in other folders)
