[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openword-lexicon"
version = "0.1.0"
description = "Openword Lexicon tooling and pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"

dependencies = [
  "click>=8.1",
  "orjson>=3.9",
  "nltk>=3.8",
  "marisa-trie>=1.0",
  "rich>=13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "black>=24.0"
]

[project.scripts]
owlex = "openword.cli:main"  # placeholder; wired later

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["openword", "openword.cli"]
