[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openword-lexicon"
version = "0.2.0"
description = "OpenWord Lexicon - word game and NLP vocabulary tools"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"

dependencies = [
  "click>=8.1",
  "orjson>=3.9",
  "nltk>=3.8",
  "wn>=0.9.5",
  "pyyaml>=6.0",
  "marisa-trie>=1.0",
  "rich>=13.0",
  "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "black>=24.0"
]

[project.scripts]
# Primary CLI entry points
owlex = "openword.cli.owlex:main"
owfetch = "openword.cli.fetch:main"
owscan = "openword.cli.scan:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["openword*"]
