[package]
name = "wiktionary-scanner-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bzip2 = "0.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
unicode-normalization = "0.1"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
